# lockstep

./: .gitignore  Makefile  README.md  mkdocs.yml  requirements-docs.txt
.github/workflows/: docs.yml
docs/: AURORA.md  DESIGN.md  HOWTO_OVERSCAN.md  TIMING.md  TUTORIAL.md  index.md
docs/blog/: index.md
docs/blog/posts/: post-1-the-320x200-lie.md  post-2-same-code-half-your-sts.md  post-3-pegs-budgets-and-an-oracle.md  post-4-all-four-borders-every-wakestate.md  post-5-sound-slack-and-the-rest-of-the-frame.md  post-6-reconstructing-and-build-your-own.md
docs/blog/posts/img/: make_images.py
docs/stylesheets/: extra.css
examples/aurora/: README.md  allbord.s  aurora.py  aurora.tos  demo.py  demo.tos  frame.py  screen.py  sound.py  visual.py
examples/aurora/orig/: aurora.s  gen_butterfly.s  gen_lissajous.s  gen_logo.s  gen_scrolltext.s  sound.s
examples/bordopen/: README.md  bordopen.py  bordopen.tos  bordws.tos
lockstep/: __init__.py  __main__.py  beamrace.py  budget.py  directives.py  effects.py  model.py  packer.py  program.py  skeleton.py  sound.py  verify.py  visual.py  wakestate.py
st68k/: __init__.py  __main__.py  annotate.py  cycles.py  hatari.py  m68k_table.py  parser.py  preprocess.py
tests/: conftest.py  test_aurora.py  test_balance.py  test_beamrace.py  test_budget.py  test_cycles.py  test_effects.py  test_hatari.py  test_pack.py  test_preprocess.py  test_skeleton.py  test_wakestate.py
tools/pygments-m68k/: pyproject.toml
tools/pygments-m68k/pygments_m68k/: __init__.py
